// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with all data 1`] = `
<div
  className="project-card-leak-measures"
>
  <ProjectCardRatingMeasure
    iconLabel="metric.bugs.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_coverage": "26.55",
        "new_duplicated_lines_density": "0.55",
        "new_lines": "87",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_bugs"
    metricRatingKey="new_reliability_rating"
    metricType="SHORT_INT"
  />
  <ProjectCardRatingMeasure
    iconLabel="metric.vulnerabilities.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_coverage": "26.55",
        "new_duplicated_lines_density": "0.55",
        "new_lines": "87",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_vulnerabilities"
    metricRatingKey="new_security_rating"
    metricType="SHORT_INT"
  />
  <ProjectCardRatingMeasure
    iconKey="security_hotspots"
    iconLabel="projects.security_hotspots_reviewed"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_coverage": "26.55",
        "new_duplicated_lines_density": "0.55",
        "new_lines": "87",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_security_hotspots_reviewed"
    metricRatingKey="new_security_review_rating"
    metricType="PERCENT"
  />
  <ProjectCardRatingMeasure
    iconLabel="metric.code_smells.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_coverage": "26.55",
        "new_duplicated_lines_density": "0.55",
        "new_lines": "87",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_code_smells"
    metricRatingKey="new_maintainability_rating"
    metricType="SHORT_INT"
  />
  <div
    className="project-card-measure"
    data-key="new_coverage"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_coverage"
          metricType="PERCENT"
          value="26.55"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.coverage.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="new_duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_duplicated_lines_density"
          metricType="PERCENT"
          value="0.55"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure project-card-ncloc"
    data-key="new_lines"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_lines"
          metricType="SHORT_INT"
          value="87"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.lines.name
      </div>
    </div>
  </div>
</div>
`;

exports[`should render no data style new coverage, new duplications and new lines 1`] = `
<div
  className="project-card-leak-measures"
>
  <ProjectCardRatingMeasure
    iconLabel="metric.bugs.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_bugs"
    metricRatingKey="new_reliability_rating"
    metricType="SHORT_INT"
  />
  <ProjectCardRatingMeasure
    iconLabel="metric.vulnerabilities.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_vulnerabilities"
    metricRatingKey="new_security_rating"
    metricType="SHORT_INT"
  />
  <ProjectCardRatingMeasure
    iconKey="security_hotspots"
    iconLabel="projects.security_hotspots_reviewed"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_security_hotspots_reviewed"
    metricRatingKey="new_security_review_rating"
    metricType="PERCENT"
  />
  <ProjectCardRatingMeasure
    iconLabel="metric.code_smells.name"
    measures={
      Object {
        "alert_status": "ERROR",
        "new_bugs": "8",
        "new_code_smells": "0",
        "new_maintainability_rating": "1.0",
        "new_reliability_rating": "1.0",
        "new_security_rating": "2.0",
        "new_vulnerabilities": "2",
      }
    }
    metricKey="new_code_smells"
    metricRatingKey="new_maintainability_rating"
    metricType="SHORT_INT"
  />
  <div
    className="project-card-measure"
    data-key="new_duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_duplicated_lines_density"
          metricType="PERCENT"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure project-card-ncloc"
    data-key="new_lines"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Measure
          metricKey="new_lines"
          metricType="SHORT_INT"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.lines.name
      </div>
    </div>
  </div>
</div>
`;
